# InitialRepo

./: README.md
TVG_Index/: CMakeLists.txt  README.md  main.cpp
TVG_Index/include/: Globals.h
TVG_Index/lib/sdk/include/: BigIntSubs.h  DateTimeParsing.h  IntervalUDx.h  Logging.h  ServerFunctions.h  UdfException.h  Vertica.cpp  Vertica.h  VerticaDFS.h  VerticaUDFS.h  VerticaUDFSImpl.h  VerticaUDx.h
TVG_Index/lib/vertica/sdk/include/: BasicsSupport.h  BasicsUDxShared.h  BigInt.cpp  BigInt.h  BuildInfo.h  EEUDxShared.h  Oids.h  PGUDxShared.h  TimestampUDxShared.h  VerticaErrorCodes.h  VerticaSymbols.h  VerticaUDl.h  VerticaUDxDebug.h  VerticaUDxInternal.h
TVG_Index/src/data_structures/: CMakeLists.txt
TVG_Index/src/data_structures/DRAM/Header/: AdjacencyDList.h  AdjacentDStructure.h
TVG_Index/src/data_structures/DRAM/Source/: AdjacencyDList.cpp  AdjacentDStructure.cpp
TVG_Index/src/data_structures/General/Header/: Link.h  MyHistogram.h  MyVector.hpp  NeighborMetaData.h  Stats.h  tvg_index.h  tvg_time.h  tvg_vertex_id.h
TVG_Index/src/data_structures/General/Source/: Link.cpp  MyHistogram.cpp  NeighborMetaData.cpp
TVG_Index/src/data_structures/Graph/Header/: DebugInfo.h  GraphMemoryManager.h  MyEdge.h  MyGraph.h  MyGraphSelect.h  MyVertex.h  MyVertexSelect.h  PerformanceMeter.h
TVG_Index/src/data_structures/Graph/Source/: DebugInfo.cpp  MyEdge.cpp  MyGraph.cpp  MyGraphSelect.cpp  MyVertex.cpp  MyVertexSelect.cpp  PerformanceMeter.cpp
TVG_Index/src/data_structures/NVRAM/Header/: AdjacentNVStructure.h  AdjacentNVVertex.h  ChainAdditionalData.h  NVChainStructure.h  NVRepository.h
TVG_Index/src/data_structures/NVRAM/Source/: AdjacentNVStructure.cpp  AdjacentNVVertex.cpp  ChainAdditionalData.cpp  NVChainStructure.cpp  NVRepository.cpp
TVG_Index/src/data_structures/Parser/Header/: AdjacentData.h  DBSecurityScheme.h  Modification.h
TVG_Index/src/data_structures/Parser/Source/: AdjacentData.cpp
TVG_Index/src/infrastructure/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  TargetNVM.h  VertexProxy.cpp  VertexProxy.h
TVG_Index/src/vertica_udf/: Add2Ints.cpp  ProcessInput.cpp  ProcessInput.h  QueryDS.cpp  QueryDS.h  SaveIterators.cpp  tvg_index.cpp  tvg_index.h
TVG_Index/udf/: helloworld.cpp
TVG_Sql/: ApplicationConstants.java  DataBaseUtility.java  DeleteGraphDao.java  DeleteGraphService.java  GetGraphDao.java  GetGraphService.java  GetGraphStatisticsDao.java  GetGraphStatisticsService.java  GetSubGraph.java  HopOne.java  HopResult.java  HopThree.java  HopTwo.java  MANIFEST.MF  ManageAppProperties.java  README.md  ShowGraphDao.java  ShowGraphService.java  SqlQueryHandler.java  StartBfsBean.java  StartBfsDao.java  StartBfsEventSocketClient.java  StartBfsService.java  TVGServletContextListener.java  TVGWidget.java  WebServiceClient.java  application.properties  comparision_system_config.properties  db.properties  index.jsp  inputFiles.lst  log4j.properties  pom.properties  pom.xml  readme.txt  startBfsEventSocketMediator.java  web.xml
TVG_Sql/TVGWebService/: .project  pom.xml  sample.json
TVG_Sql/TVGWebService/src/main/java/com/hpl/hp/com/bean/: ResponseErrorMessageBean.java  ResponseMessageBean.java  StartBfsBean.java
TVG_Sql/TVGWebService/src/main/java/com/hpl/hp/com/dao/: DeleteGraphDao.java  GetGraphDao.java  GetGraphStatisticsDao.java  GetSubGraph.java  HopOne.java  HopResult.java  HopThree.java  HopTwo.java  ShowGraphDao.java  SqlQueryHandler.java  StartBfsDao.java
TVG_Sql/TVGWebService/src/main/java/com/hpl/hp/com/servlets/: TVGServletContextListener.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/bean/: DeleteGraphBean.java  GetGraphBean.java  GetGraphStatisticsBean.java  GraphStatisticsResultBean.java  QueryResultBean.java  ResponseErrorMessageBean.java  ResponseMessageBean.java  ShowGraphBean.java  StartBfsBean.java  StatisticsBean.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/dao/: DeleteGraphDao.java  GetGraphDao.java  GetGraphStatisticsDao.java  HopOneDao.java  HopResult.java  HopThreeDao.java  HopTwoDao.java  ShowGraphDao.java  SqlQueryHandler.java  StartBfsDao.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/services/: ExtractSubGraph.java  GetNodeMetaData.java  GetSubGraph.java  GetSubGraphResults.java  HopResult.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/servlets/: TVGServletContextListener.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/util/: ApplicationConstants.java  DataBaseUtility.java  FileHandling.java  GraphsonUtil.java  ManageAppProperties.java  VertexTokenSet.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/validation/: DeleteGraphBeanValidation.java  GetGraphBeanValidation.java  GetGraphStatisticsBeanValidation.java  ShowGraphBeanValidation.java  StartBfsBeanValidation.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/websocket/: StartBfsWebSocket.java  StartBfsWebSocketClient.java  TVGWidget.java
TVG_Sql/TVGWebService/src/main/java/tvg/hpl/hp/com/ws/: DeleteGraphService.java  GetGraphService.java  GetGraphStatisticsService.java  ShowGraphService.java  StartBfsService.java
TVG_Sql/TVGWebService/src/main/resources/: application.properties  db.properties  log4j.properties
TVG_Sql/TVGWebService/src/main/webapp/: index.html  index.jsp  swagger-ui.js
TVG_Sql/TVGWebService/src/main/webapp/WEB-INF/: web.xml
TVG_Widget/: index.html
TVG_Widget/css/: widget_style.css
TVG_Widget/css/fonts/: HPSimplifiedW01-BoldItalic.eot  HPSimplifiedW01-Italic.eot  HPSimplifiedW01-Light.eot  HPSimplifiedW01-LightItalic.eot  HPSimplifiedW04-BoldItalic.eot  HPSimplifiedW04-LightItalic.eot
TVG_Widget/js/: drawGraphLabels.js  drawGraphOriginal.js  drawGraphSVG.js  drawGraphWebGl.js  drawGraphWebGlOriginal.js  globalParameters.js  serverInteractions.js  timeComponents.js  utils.js
TVG_Widget/lib/vivagraph/: vivagraph.js
sql/: README.md
widget/: README.md
(+15 files in other folders)
